--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongoose": "^5.2.9",
